--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.18.9",
     "@types/node": "^18.0.6",
-    "aws-sdk": "^2.1177.0",
+    "aws-sdk": "^2.1414.0",
     "dotenv": "^16.0.1",
     "eslint": "^8.20.0",
+    "papaparse": "^5.4.1",
     "prettier": "^2.7.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0"
+  },
+  "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
+    "@types/papaparse": "^5.3.7"
   }
 }
